[gd_scene load_steps=9 format=3 uid="uid://bgmfbcegj3wdu"]

[ext_resource type="Texture2D" uid="uid://b438aqqeyebuf" path="res://Assets/Environments/SunnyLand/Props/door.png" id="1_dv2db"]
[ext_resource type="Script" path="res://Scripts/door.gd" id="1_i2c7l"]
[ext_resource type="Texture2D" uid="uid://c142gcfolkpxo" path="res://Assets/Environments/SunnyLand/Props/door-opened.png" id="2_jmkcq"]
[ext_resource type="FontFile" uid="uid://cr21hq35enhfi" path="res://Assets/Fonts/Raleway-ExtraBold.ttf" id="4_mq7sq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r2iwj"]
atlas = ExtResource("1_dv2db")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqgjv"]
atlas = ExtResource("2_jmkcq")
region = Rect2(0, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_1srij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2iwj")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqgjv")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2avl"]
size = Vector2(207, 329)

[node name="Door" type="Node2D"]
script = ExtResource("1_i2c7l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(10.5455, 10.5455)
sprite_frames = SubResource("SpriteFrames_1srij")
animation = &"closed"
autoplay = "closed"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 3.5)
shape = SubResource("RectangleShape2D_e2avl")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -192.0
offset_top = -200.0
offset_right = 226.0
offset_bottom = -165.0
theme_override_fonts/font = ExtResource("4_mq7sq")
theme_override_font_sizes/font_size = 25
text = "You need a key to unlock the door!"

[node name="LabelShowTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HowToEnter" type="Label" parent="."]
visible = false
offset_left = -96.0
offset_top = -216.0
offset_right = 108.0
offset_bottom = -167.0
theme_override_fonts/font = ExtResource("4_mq7sq")
text = "Press W to enter the Layer
(You cannot go back)"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="LabelShowTimer" to="." method="_on_label_show_timer_timeout"]
